--- a/cover/cover.css
+++ b/cover/cover.css
@@ -5,14 +5,31 @@ body {
   background-blend-mode: overlay;
 }
 
+.nav-masthead .nav-link {
+  color: rgba(255, 255, 255, .5);
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+.full-width-header {
+  width: 100%;
+}
 .Parrafo{
   align-items: flex-start;
   background-position-y: bottom;
   background-color: #6528e0;
-}
-
-.cover-container {
-  max-width: 42em;
 }
 
 .btn-bd-primary {
